Add "My expenses" page
